--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -6,8 +6,10 @@ services:
     container_name: shoeshop-database
     pull_policy: if_not_present
     restart: always
+    env_file:
+      - ./.env
     healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "-p${MYSQL_ROOT_PASSWORD}"]
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "-p${DB_PASSWORD}"]
       interval: 30s
       timeout: 10s
       retries: 5
@@ -16,12 +18,12 @@ services:
       - shoeshop-network
 
   shoeshop-backend:
-    image: toannd135/shoeshop-backend:v3
+    image: toannd135/shoeshop-backend:v4
     container_name: shoeshop-backend
     pull_policy: if_not_present
     restart: always
     ports: 
-      - "8080:8080"
+      - "8081:8080"
     env_file:
       - ./.env
     networks:
@@ -30,11 +32,11 @@ services:
       shoeshop-mysql:
         condition: service_healthy
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8080/actuator/health"]
+      test: ["CMD-SHELL", "wget --no-verbose --tries=1 --spider http://localhost:8080/actuator/health || exit 1"]
       interval: 30s
       timeout: 10s
       retries: 3
-      start_period: 40s
+      start_period: 60s
 
   shoeshop-frontend:
     image: toannd135/shoeshop-frontend:v3
@@ -42,7 +44,7 @@ services:
     pull_policy: if_not_present
     restart: always
     ports:
-      - "3000:80"
+      - "3001:80"
     networks:
       - shoeshop-network
     depends_on:
