--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,7 +20,7 @@ services:
       - shoeshop-network
 
   shoeshop-backend:
-    image: toannd135/shoeshop-backend:v3
+    image: toannd135/shoeshop-backend:v4
     container_name: shoeshop-backend
     pull_policy: if_not_present
     restart: always
@@ -34,7 +34,7 @@ services:
       shoeshop-mysql:
         condition: service_healthy
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8080/actuator/health"]
+      test: ["CMD-SHELL", "wget --no-verbose --tries=1 --spider http://localhost:8080/actuator/health || exit 1"]
       interval: 30s
       timeout: 10s
       retries: 3
